# SummonMind-Problem-Statement

./: ARCHITECTURE.md  README.md  main.py  pyproject.toml  requirements.txt
samples/: invalid_rule.json  invalid_schema.json  valid_intermediate.json  valid_simple.json
src/routes/: validate_routes.py
src/schemas/: validation_schemas.py
src/utils/: validation_utils.py
